# capital_gain

./: Makefile  README.md  capital_gain.py  capital_gain_test.py  cases.txt  pyproject.toml
.github/workflows/: python-app.yml  release.yml
