[project]
name = "capital_gain"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.DEV.dependencies]
pytest = "^8.3.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
python-semantic-release = "^10.2.0"

[tool.semantic_release]
version_variable = "pyproject.toml:version"
branch = "main"
upload_to_pypi = false
changelog_file = "CHANGELOG.md"
build_command = ""

[tool.semantic_release.changelog]
exclude_commit_types = ["chore", "style"]